c4prj2_input/grade.txt
Grading at Sun Aug 30 03:33:54 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:24:24: error: ‘future_cards_t {aka struct future_cards_tag}’ has no member named ‘n_cards’
   if(deck->n_cards < fc->n_cards) {
                        ^
future.c:26:12: error: ‘return’ with a value, in function returning void [-Werror]
     return EXIT_FAILURE;
            ^
cc1: all warnings being treated as errors
Compilation of future.c failed

Overall Grade: F
